--- a/app.beta/package.json
+++ b/app.beta/package.json
@@ -7,5 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "browserify": "^10.2.1",
+    "gulp": "^3.8.11",
+    "gulp-browserify": "^0.5.1",
+    "watchify": "^3.2.1"
+  }
 }
